Refactor code style and suppressions in tests and core classes